<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvCitas"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="@dimen/lmargin"
    card_view:cardCornerRadius="@dimen/cornerRadiusCV"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cita"
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/tvFechaCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="20/03/2017 12:20"
            android:layout_marginLeft="@dimen/left"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNombrePac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Nombre del paciente"
            android:layout_marginLeft="@dimen/left"
            />
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ltipocita"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

            <TextView
                android:id="@+id/tvTipoCons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Sucesiva"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lnhc"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

            <TextView
                android:id="@+id/tvNhc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="200221"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ldiagnostico"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

            <TextView
                android:id="@+id/tvDiagnostico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Nevus"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>



    </LinearLayout>
</android.support.v7.widget.CardView>
