<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jrpascual.protodermcam.activities.PacienteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cita"
                android:layout_gravity="left"
                />
            <TextView
                android:id="@+id/tvPacienteFechaCita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="20/03/2017 12:20"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
            android:id="@+id/tvPacienteNombrePac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Nombre del paciente"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ltipocita"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

            <TextView
                android:id="@+id/tvPacienteTipoCons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Sucesiva"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lnhc"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

            <TextView
                android:id="@+id/tvPacienteNhc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="200221"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ldiagnostico"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

            <TextView
                android:id="@+id/tvPacienteDiagnostico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Nevus"
                android:layout_marginLeft="@dimen/left"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lfotos"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/left"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <ImageView
            android:id="@+id/ivPacienteFoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal = "true"
            android:layout_centerVertical = "true"
            android:src="@drawable/nevus"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top"
            android:layout_marginBottom="@dimen/top"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageButton
                android:id="@+id/ibPacienteCamara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/camara"
                android:scaleType="center"
                android:layout_marginTop="@dimen/top"
                />
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>
